# ai-sharpness-monitor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.sh
api/: main.py
api/routes/: __init__.py  feedback.py  health.py  scores.py  sessions.py
bot/: telegram_bot.py
dashboard/: app.py  index.html
db/: __init__.py  models.py
monitor/: __init__.py  alerts.py  config.py  context_tracker.py  db.py  feedback.py  market.py  prober.py  scheduler.py  scorer.py  time_patterns.py
tests/: test_context_tracker.py  test_market.py  test_scorer.py  test_time_patterns.py
