[project]
name = "ai-sharpness-monitor"
version = "0.2.0"
description = "Real-time LLM performance monitor — Cerebras + BTC volatility proxy"
authors = [{name = "George Pricop"}]
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "WARNING"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
